@startuml

title __TFLITE's Class Diagram__\n

  namespace com.google.firebase.ml.md {
    namespace java {
      namespace tflite {
        abstract class com.google.firebase.ml.md.java.tflite.Classifier {
            # tflite : Interpreter
            {static} - LOGGER : Logger
            {static} - MAX_RESULTS : int
            - gpuDelegate : GpuDelegate
            - imageSizeX : int
            - imageSizeY : int
            - inputImageBuffer : TensorImage
            - labels : List<String>
            - nnApiDelegate : NnApiDelegate
            - outputProbabilityBuffer : TensorBuffer
            - probabilityProcessor : TensorProcessor
            - tfliteModel : MappedByteBuffer
            - tfliteOptions : Options
            + close()
            {static} + create()
            + getImageSizeX()
            + getImageSizeY()
            + recognizeImage()
            # Classifier()
            {abstract} # getLabelPath()
            {abstract} # getModelPath()
            {abstract} # getPostprocessNormalizeOp()
            {abstract} # getPreprocessNormalizeOp()
            {static} - getTopKProbability()
            - loadImage()
        }
      }
    }
  }
  

  namespace com.google.firebase.ml.md {
    namespace java {
      namespace tflite {
        enum Device {
          CPU
          GPU
          NNAPI
        }
      }
    }
  }
  

  namespace com.google.firebase.ml.md {
    namespace java {
      namespace tflite {
        enum Model {
          FLOAT
          QUANTIZED
        }
      }
    }
  }
  

  namespace com.google.firebase.ml.md {
    namespace java {
      namespace tflite {
        class com.google.firebase.ml.md.java.tflite.Classifier.Recognition {
            - confidence : Float
            - id : String
            - location : RectF
            - title : String
            + Recognition()
            + getConfidence()
            + getId()
            + getLocation()
            + getTitle()
            + setLocation()
            + toString()
        }
      }
    }
  }
  

  namespace com.google.firebase.ml.md {
    namespace java {
      namespace tflite {
        class com.google.firebase.ml.md.java.tflite.ClassifierFloatMobileNet {
            {static} - IMAGE_MEAN : float
            {static} - IMAGE_STD : float
            {static} - PROBABILITY_MEAN : float
            {static} - PROBABILITY_STD : float
            + ClassifierFloatMobileNet()
            # getLabelPath()
            # getModelPath()
            # getPostprocessNormalizeOp()
            # getPreprocessNormalizeOp()
        }
      }
    }
  }
  

  namespace com.google.firebase.ml.md {
    namespace java {
      namespace tflite {
        class com.google.firebase.ml.md.java.tflite.ClassifierQuantizedMobileNet {
            {static} - IMAGE_MEAN : float
            {static} - IMAGE_STD : float
            {static} - PROBABILITY_MEAN : float
            {static} - PROBABILITY_STD : float
            + ClassifierQuantizedMobileNet()
            # getLabelPath()
            # getModelPath()
            # getPostprocessNormalizeOp()
            # getPreprocessNormalizeOp()
        }
      }
    }
  }
  

  com.google.firebase.ml.md.java.tflite.Classifier +-down- com.google.firebase.ml.md.java.tflite.Classifier.Device
  com.google.firebase.ml.md.java.tflite.Classifier +-down- com.google.firebase.ml.md.java.tflite.Classifier.Model
  com.google.firebase.ml.md.java.tflite.Classifier +-down- com.google.firebase.ml.md.java.tflite.Classifier.Recognition
  com.google.firebase.ml.md.java.tflite.ClassifierFloatMobileNet -up-|> com.google.firebase.ml.md.java.tflite.Classifier
  com.google.firebase.ml.md.java.tflite.ClassifierQuantizedMobileNet -up-|> com.google.firebase.ml.md.java.tflite.Classifier


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
